# BC-TGP

BlackJack/: CMakeLists.txt  main.cpp
BlackJack/BlackJack/Card/: AceCard.cpp  AceCard.h  Card.cpp  Card.h
BlackJack/BlackJack/Deck/: Deck.cpp  Deck.h
BlackJack/BlackJack/Player/: GenericPlayer.cpp  GenericPlayer.h  House.cpp  House.h  Player.cpp  Player.h
BlackJack/Practice/: Boss.cpp  Boss.h  Creature.cpp  Creature.h  Enemy.cpp  Enemy.h  Orc.cpp  Orc.h  functions.cpp
CritterCaretaker/: CMakeLists.txt  Critter.cpp  Critter.h  main.cpp
GameLobby/: CMakeLists.txt  Critter.cpp  Critter.h  Farm.cpp  Farm.h  Lobby.cpp  Lobby.h  Player.cpp  Player.h  heap.cpp  main.cpp
GuessMyNumber/: CMakeLists.txt  main.cpp
Hangman/: main.cpp
LostFortune/: CMakeLists.txt  main.cpp
MadLib/: CMakeLists.txt  main.cpp
TicTacToe/: CMakeLists.txt  main.cpp
TicTacToe2.0/: CMakeLists.txt  main.cpp
WordJumble/: CMakeLists.txt  main.cpp
